--- a/word-relaygame/word-relay.html
+++ b/word-relaygame/word-relay.html
@@ -14,7 +14,14 @@
 <script>
   const number = parseInt(prompt("몇 명이 참가하나요?"));//사용자에게 입력을 받음
   alert(number);//경고창 출력
-  confirm("맞나요?");//확인창
+  confirm("맞나요?");//확인창 yer or no
+
+  document.querySelector("input").addEventListener("input",function() {
+    console.log("글자 입력");
+  });
+  document.querySelector("button").addEventListener("click",function(){
+    console.log("버튼 클릭");
+  });
 </script>
 </body>
 
