--- a/word-relaygame/word-relay.html
+++ b/word-relaygame/word-relay.html
@@ -13,15 +13,33 @@
 <button>입력</button>
 <script>
   const number = parseInt(prompt("몇 명이 참가하나요?"));//사용자에게 입력을 받음
-  alert(number);//경고창 출력
-  confirm("맞나요?");//확인창 yer or no
+  const $button = document.querySelector("button");
+  const $input = document.querySelector("input");
+  const $word = document.querySelector("#word")
+  let word;
+  let newWord;
+  //alert(number);//경고창 출력
+  //confirm("맞나요?");//확인창 yer or no
+  const onClickButton=()=>{
+    if(!word){//제시어가 비어있는가?
+      word=newWord;//입력한 단어가 제시어
+      $word.textContent=word;
+    }
+    else{
 
-  document.querySelector("input").addEventListener("input",function() {
+    }
+  };
+  const onInput=(event)=>{
+    newWord=event.target.value;
+  };
+  $button.addEventListener("click",onClickButton);
+  $input.addEventListener("input",onInput);
+  /*document.querySelector("input").addEventListener("input",function() {
     console.log("글자 입력");
   });
   document.querySelector("button").addEventListener("click",function(){
     console.log("버튼 클릭");
-  });
+  });*/
 </script>
 </body>
 
