--- a/word-relaygame/word-relay.html
+++ b/word-relaygame/word-relay.html
@@ -24,6 +24,7 @@
     if(!word){//제시어가 비어있는가?
       word=newWord;//입력한 단어가 제시어
       $word.textContent=word;
+      $input.value = " ";
     }
     else{
 
