feat : (최종) C를 클릭했을때 저장 값을 초기화

--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -97,6 +97,11 @@ document.querySelector('#calculate').addEventListener('click',()=>{
 }
 });
 document.querySelector('#clear').addEventListener('click',()=>{
+  $operator.value='';
+  $result.value='';
+  numOne='';
+  operator='';
+  numTwo='';
 });
 </script>
 </body>
