--- a/Learn HTML_CSS/Learn_HTML/img-media.html
+++ b/Learn HTML_CSS/Learn_HTML/img-media.html
@@ -8,7 +8,17 @@
   </head>
   <body>
     <h2>이미지 태그</h2>
-    <img width="200" src="../wolf.jpg" alt="늑대" />
-    <img height="120" src="../wolf.jpg" alt="늑대" />
+    <img width="200" src="../assets/images/wolf.jpg" alt="늑대" />
+    <img height="120" src="../assets/images/wolf.jpg" alt="늑대" />
+
+    <h2>오디오 태그</h2>
+    <audio src="../assets/audio.mp3" controls></audio>
+    <h2>비디오 태그</h2>
+    <video
+      width="400"
+      src="../assets/video.mp4"
+      controls
+      type="video/mp4"
+    ></video>
   </body>
 </html>
