video 태그에서 사용하는 poster태그를 통해 비디오가 재생되기 전까지 표시 될 이미지를 지정

--- a/Learn HTML_CSS/Learn_HTML/img-media.html
+++ b/Learn HTML_CSS/Learn_HTML/img-media.html
@@ -17,6 +17,7 @@
     <video
       width="400"
       src="../assets/video.mp4"
+      poster="../assets/images/wolf.jpg"
       controls
       type="video/mp4"
     ></video>
