a태그의 href속성을 사용해 하이퍼 링크를 적용 , targe=_blank를 통해 새탭으로 페이지를 열기 , img 태그를 사용해 이미지에 하이퍼 링크를 적용

--- a/Learn HTML_CSS/Learn_HTML/img-media.html
+++ b/Learn HTML_CSS/Learn_HTML/img-media.html
@@ -21,5 +21,11 @@
       controls
       type="video/mp4"
     ></video>
+    <h2>하이퍼 링크</h2>
+    <a href="https://www.naver.com/" target="_blank">네이버</a>와
+    <a href="https://www.google.com/">구글</a>은 포털 사이트 이다.
+    <a href="https://www.naver.com/" target="_blank"
+      ><img src="../assets/images/wolf.jpg" alt="늑대"
+    /></a>
   </body>
 </html>
