--- a/Learn HTML_CSS/Learn_HTML/img-media.html
+++ b/Learn HTML_CSS/Learn_HTML/img-media.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>img media</title>
+    <style>
+      div {
+        width: 100px;
+        height: 100px;
+        background-color: chartreuse;
+        border: 1px solid darkslategray;
+      }
+    </style>
   </head>
   <body>
     <h2>이미지 태그</h2>
@@ -27,5 +35,27 @@
     <a href="https://www.naver.com/" target="_blank"
       ><img src="../assets/images/wolf.jpg" alt="늑대"
     /></a>
+    <a href="#target">target으로 이동</a>
+    <a href="mailto:bruce.ehddn5410@naver.com">이메일 보내기</a>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
+    <div>6</div>
+    <div>7</div>
+    <div>8</div>
+    <div id="target">9</div>
+    <div>10</div>
+    <div>11</div>
+    <div>12</div>
+    <div>13</div>
+    <div>14</div>
+    <div>15</div>
+    <div>16</div>
+    <div>17</div>
+    <div>18</div>
+    <div>19</div>
+    <div>20</div>
   </body>
 </html>
