--- a/Learn HTML_CSS/Learn_HTML/form_input.html
+++ b/Learn HTML_CSS/Learn_HTML/form_input.html
@@ -45,6 +45,23 @@
           </li>
         </ul>
       </fieldset>
+      <fieldset>
+        <legend>날짜관련</legend>
+        <ul>
+          <li>
+            <label for="date">date</label>
+            <input type="date" id="date" min="2021-07-10" max="2021-07-15" />
+          </li>
+          <li>
+            <label for="month">month</label>
+            <input type="month" id="month" />
+          </li>
+          <li>
+            <label for="week">날짜</label>
+            <input type="week" id="week" />
+          </li>
+        </ul>
+      </fieldset>
       <input type="submit" value="제출하기" />
     </form>
   </body>
