시간 관련 태그와 그 외 file을 업로드 할 수 있는 태그 ,추가 password태그= 입력시 마스킹을 통해 입력 받은 비밀번호를 가림

--- a/Learn HTML_CSS/Learn_HTML/form_input.html
+++ b/Learn HTML_CSS/Learn_HTML/form_input.html
@@ -43,6 +43,12 @@
               <input type="range" id="range" min="5" max="10" />
             </label>
           </li>
+          <li>
+            <label>
+              비밀번호
+              <input type="password" id="password" />
+            </label>
+          </li>
         </ul>
       </fieldset>
       <fieldset>
@@ -59,6 +65,28 @@
           <li>
             <label for="week">날짜</label>
             <input type="week" id="week" />
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset>
+        <legend>시간 관련</legend>
+        <ul>
+          <li>
+            <label for="time">time</label>
+            <input type="time" id="time" />
+          </li>
+        </ul>
+      </fieldset>
+      <fieldset>
+        <legend>그 외</legend>
+        <ul>
+          <li>
+            <input type="file" />
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <input type="file" multiple />
           </li>
         </ul>
       </fieldset>
