--- a/Learn HTML_CSS/Learn_HTML/form_input.html
+++ b/Learn HTML_CSS/Learn_HTML/form_input.html
@@ -13,22 +13,27 @@
         <ul>
           <li>
             <label for="text">텍스트</label>
-            <input type="text" id="text" />
+            <input type="text" id="text" required value="배동우" readonly />
           </li>
           <li>
             <label for="email">이메일</label>
-            <input type="email" id="email" />
+            <input type="email" id="email" required value="안녕" disabled />
           </li>
           <li>
             <label>
               전화번호
-              <input type="tel" id="tel" />
+              <input type="tel" id="tel" required autofocus />
             </label>
           </li>
           <li>
             <label>
               url
-              <input type="url" id="url" />
+              <input
+                type="url"
+                id="url"
+                required
+                placeholder="url을 입력해주세요"
+              />
             </label>
           </li>
           <li>
