textarea 여러줄의 입력을 받을때 사용

--- a/Learn HTML_CSS/Learn_HTML/form_Radio_Checkbox.html
+++ b/Learn HTML_CSS/Learn_HTML/form_Radio_Checkbox.html
@@ -46,6 +46,12 @@
           </li>
         </ul>
       </fieldset>
+      <fieldset>
+        <legend>자기소개서</legend>
+        <textarea name="" id="" cols="10" rows="5">
+저는 배동우 입니다. </textarea
+        >
+      </fieldset>
     </form>
   </body>
 </html>
