datalist와 input태그를 사용해 검색이 가능한 옵션리스트

--- a/Learn HTML_CSS/Learn_HTML/form_Radio_Checkbox.html
+++ b/Learn HTML_CSS/Learn_HTML/form_Radio_Checkbox.html
@@ -66,6 +66,17 @@
               <option value="apple_50kg">사과50kg</option>
             </select>
           </li>
+          <li>
+            <label for="choice">맛을 선택해주세요.</label>
+            <br />
+            <input list="flavors" id="choice" name="choice" />
+            <datalist id="flavors">
+              <option value="choco"></option>
+              <option value="coconut"></option>
+              <option value="mint"></option>
+              <option value="vanilla"></option>
+            </datalist>
+          </li>
         </ul>
       </fieldset>
     </form>
